feat: Add database isolation, Java auto-install scripts, and Docker container support